# stl-thumb

./: .clangd  .editorconfig  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  Makefile  cbindgen.toml
.cargo/: config.toml
benches/: models.rs
cli/: Cargo.toml
cli/src/: main.rs  utils.rs
src/: capi.rs  config.rs  error.rs  fxaa.rs  lib.rs  main.rs  mesh.rs  render.rs  shader.rs
src/shaders/: fxaa.frag  fxaa.vert  model.frag  model.vert  model.wgsl
test/: .clang-format  README.md  test.c  test.sh
