[package]
name = "stl-thumb"
version = "0.5.0"
authors = ["Tyler Anderson <unlimitedbacon@gmail.com>"]
description = "A fast lightweight thumbnail generator for 3D model(STL, OBJ, 3MF) files"
readme = "README.md"
repository = "https://github.com/unlimitedbacon/stl-thumb"
license = "MIT"
homepage = "https://github.com/unlimitedbacon/stl-thumb"
keywords = ["3d", "3dprinting", "stl", "obj", "3mf"]
categories = ["command-line-utilities", "graphics"]
exclude = ["test_data/*"]
edition = "2021"

[lib]
name = "stl_thumb"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "stl-thumb"
path = "src/main.rs"

[dependencies]
ahash = "0.8.11"
cgmath = { version = "0.18.0", features = ["mint"] }
clap = "4.5.20"
glium = "0.32.1"
image = "0.25.4"
stl_io = "0.8.0"
tobj = "4.0.2"
threemf = "0.6.0"

[build-dependencies]
cbindgen = "0.27.*"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "cube"
harness = false

[[bench]]
name = "benchy"
harness = false

[[bench]]
name = "shipwreck"
harness = false
