[package]
name    = "stl-thumb"
version = "0.5.0"

authors = [
  "Tyler Anderson <unlimitedbacon@gmail.com>",
  "Vítor Vasconcellos <vasconcellos.dev@gmail.com>"
]

categories  = ["command-line-utilities", "graphics"]
description = "A fast lightweight thumbnail generator for 3D model(STL, OBJ, 3MF) files"
homepage    = "https://github.com/unlimitedbacon/stl-thumb"
keywords    = ["3d", "3dprinting", "3mf", "obj", "stl"]
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/unlimitedbacon/stl-thumb"

edition = "2021"
exclude = ["test_data/*"]

[dependencies]
bytemuck           = { version = "1.19", features = ["derive"] }
clap               = '4.5'
glam               = { version = "0.29.0", features = ["bytemuck"] }
image              = "0.25.4"
libc               = '0.2.161'
stl_io             = "0.8.0"
thiserror          = "1.0"
threemf            = "0.6.0"
tobj               = "4.0.2"
tracing            = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu               = "22.1"

[dependencies.tokio]
default-features = false
features         = ["macros", "rt-multi-thread", "sync"]
version          = "1.41"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bin]]
name = "stl-thumb"
path = "src/main.rs"

[[bench]]
harness = false
name    = "models"

[profile.dev]
opt-level = 1

[profile.release]
debug       = true
incremental = true
lto         = "thin"
strip       = "symbols"

[profile.bench]
incremental = true

[package.metadata.docs.rs]
no-default-features = true

[lints.clippy]
cargo       = { priority = -1, level = "deny" }
complexity  = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
nursery     = { priority = -1, level = "deny" }
pedantic    = { priority = -1, level = "deny" }
perf        = { priority = -1, level = "deny" }
style       = { priority = -1, level = "deny" }
suspicious  = { priority = -1, level = "deny" }

implicit-return         = "allow"
module-name-repetitions = "allow"
multiple-crate-versions = "allow"
pub-use                 = "allow"
too_many_lines          = "allow"
